--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "express" : "3.4.x",
     "jade" : "1.3.x",
     "lodash" : "2.4.1",
-    "moment": " 2.6.0"
+    "moment": " 2.6.0",
+    "passport": "0.2.x",
+    "passport-oauth2": "1.1.x"
   },
   "devDependencies" : {
     "chai" : "1.9.x",
     "chai-as-promised": "4.1.x",
-    "mocha" : "1.18.x"
+    "chai-passport-strategy": "0.2.x",
+    "mocha" : "1.18.x",
+    "nock": "0.31.x",
+    "supertest" : "0.12.x"
   }
+
 }
