Add getArtists function to retrieve a list of a user's rdio artists

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lodash" : "2.4.1",
     "moment": " 2.6.0",
     "passport": "0.2.x",
-    "passport-oauth2": "1.1.x"
+    "passport-oauth2": "1.1.x",
+    "request" : "2.36.x"
   },
   "devDependencies" : {
     "chai" : "1.9.x",
@@ -20,6 +21,7 @@
     "grunt-mocha-test" : "0.10.x",
     "mocha" : "1.18.x",
     "nock": "0.31.x",
+    "parseUri" : "1.2.3-2",
     "supertest" : "0.12.x"
   }
 }
