--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author" : "Raya Desawade",
   "dependencies" : {
     "bluebird" : "1.2.x",
+    "connect-redis": "1.4.7",
     "express" : "3.4.x",
     "jade" : "1.3.x",
     "lodash" : "2.4.1",
