--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-redis": "1.4.7",
     "express" : "3.4.x",
     "jade" : "1.3.x",
+    "kue" : "0.7.x",
     "lodash" : "2.4.1",
     "moment": " 2.6.0",
     "passport": "0.2.x",
