Add queueing/polling functionality for checking the status of echonest jobs.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt" : "0.4.x",
     "grunt-mocha-test" : "0.10.x",
     "mocha" : "1.18.x",
+    "mock-kue" : "0.0.7",
     "nock": "0.31.x",
     "parseUri" : "1.2.3-2",
     "supertest" : "0.12.x"
