Add basic client side js + tests to display and change a user's location
- Add Google map which defaults to showing the user's current location
  based on the geolocation API.
- Add form to change city
- Add function to change address of map

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mock-kue" : "0.0.7",
     "nock": "0.31.x",
     "parseUri" : "1.2.3-2",
-    "supertest" : "0.12.x"
+    "supertest" : "0.12.x",
+    "webdriverjs" : "1.7.x"
+
   }
 }
