--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": " 2.6.0",
     "passport": "0.2.x",
     "passport-oauth2": "1.1.x",
-    "request" : "2.36.x"
+    "request" : "2.36.x",
+    "templatizer" : "0.3.x"
   },
   "devDependencies" : {
     "chai" : "1.9.x",
