--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "passport": "0.2.x",
     "passport-oauth2": "1.1.x",
     "request" : "2.36.x",
-    "templatizer" : "0.3.x"
+    "templatizer" : "0.3.x",
+    "winston" : "0.7.3"
   },
   "devDependencies" : {
     "chai" : "1.9.x",
