--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name" : "Concerts",
-  "version" : "0.0.1",
-  "description" : "Get concert listings in your area for your rdio artists.",
-  "author" : "Raya Desawade",
-  "dependencies" : {
-    "bluebird" : "1.2.x",
+  "name": "Concerts",
+  "version": "0.0.1",
+  "description": "Get concert listings in your area for your rdio artists.",
+  "author": "Raya Desawade",
+  "dependencies": {
+    "bluebird": "1.2.x",
     "connect-redis": "1.4.7",
-    "express" : "3.4.x",
-    "jade" : "1.3.x",
-    "kue" : "0.7.x",
-    "lodash" : "2.4.1",
-    "moment": " 2.6.0",
+    "express": "3.4.x",
+    "jade": "1.3.x",
+    "kue": "0.7.x",
+    "lodash": "2.4.1",
+    "moment": "2.6.0",
     "passport": "0.2.x",
     "passport-oauth2": "1.1.x",
-    "request" : "2.36.x",
-    "templatizer" : "0.3.x",
-    "winston" : "0.7.3"
+    "pm2" : "0.8.15",
+    "request": "2.36.x",
+    "templatizer": "0.3.x",
+    "winston": "0.7.3"
   },
-  "devDependencies" : {
-    "chai" : "1.9.x",
+  "devDependencies": {
+    "chai": "1.9.x",
     "chai-as-promised": "4.1.x",
     "chai-passport-strategy": "0.2.x",
-    "grunt" : "0.4.5",
-    "grunt-contrib-concat":"0.4.x",
-    "grunt-contrib-watch" : "0.6.x",
-    "grunt-contrib-cssmin" : "0.9.x",
-    "grunt-mocha-test" : "0.10.x",
-    "grunt-sass" : "0.12.1",
-    "mocha" : "1.18.x",
-    "mock-kue" : "0.0.7",
+    "grunt": "0.4.5",
+    "grunt-contrib-concat": "0.4.x",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "0.9.x",
+    "grunt-contrib-watch": "0.6.x",
+    "grunt-mocha-test": "0.10.x",
+    "grunt-sass": "0.12.1",
+    "mocha": "1.18.x",
+    "mock-kue": "0.0.7",
     "nock": "0.31.x",
-    "parseUri" : "1.2.3-2",
-    "supertest" : "0.12.x",
-    "webdriverjs" : "1.7.x"
+    "parseUri": "1.2.3-2",
+    "supertest": "0.12.x",
+    "webdriverjs": "1.7.x"
+  },
+  "scripts" : {
+    "start" : "pm2 start app/app.js",
+    "stop" : "pm2 stop all"
   }
 }
