Remove hard coded ports and environment settings.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "0.9.x",
     "grunt-contrib-watch": "0.6.x",
+    "grunt-env" : "0.4.1",
     "grunt-mocha-test": "0.10.x",
     "grunt-sass": "0.12.1",
     "mocha": "1.18.x",
