--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "chai-as-promised": "4.1.x",
     "chai-passport-strategy": "0.2.x",
     "grunt": "0.4.5",
+    "grunt-concurrent" : "0.5.x",
     "grunt-contrib-concat": "0.4.x",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "0.9.x",
     "grunt-contrib-watch": "0.6.x",
     "grunt-env" : "0.4.1",
     "grunt-mocha-test": "0.10.x",
+    "grunt-nodemon": "0.2.1",
     "grunt-sass": "0.12.1",
     "mocha": "1.18.x",
     "mock-kue": "0.0.7",
@@ -37,8 +39,8 @@
     "supertest": "0.12.x",
     "webdriverjs": "1.7.x"
   },
-  "scripts" : {
-    "start" : "pm2 start app/app.js",
-    "stop" : "pm2 stop all"
+  "scripts": {
+    "start": "NODE_ENV=production pm2 start app/app.js",
+    "stop": "pm2 stop all"
   }
 }
