Update grunt build workflow
* Add task to clean /build folder
* Move Jade template compilation step from server to grunt
   shell:compileTemplates task
* Concatenate/minify JS
* Replace manually loading grunt loadNpmTasks with load-grunt-tasks
   plugin

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ build
 logs
 node_modules
 app/public/stylesheets/app.min.css
-app/public/js/moment.min.js
-app/public/js/templates.js
-
+app/public/js/app.min.js
 .idea
 TODO.md
