--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "chai-passport-strategy": "0.2.x",
     "grunt": "0.4.5",
     "grunt-concurrent" : "0.5.x",
-    "grunt-contrib-concat": "0.4.x",
+    "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "0.9.x",
+    "grunt-contrib-uglify": "0.5.0",
     "grunt-contrib-watch": "0.6.x",
     "grunt-env" : "0.4.1",
     "grunt-mocha-test": "0.10.x",
     "grunt-nodemon": "0.2.1",
     "grunt-sass": "0.12.1",
+    "grunt-shell" : "0.7.0",
     "mocha": "1.18.x",
     "mock-kue": "0.0.7",
     "nock": "0.31.x",
