--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-nodemon": "0.2.1",
     "grunt-sass": "0.12.1",
     "grunt-shell" : "0.7.0",
+    "load-grunt-tasks":"0.5.0",
     "mocha": "1.18.x",
     "mock-kue": "0.0.7",
     "nock": "0.31.x",
